<resources>
    <string name="app_name">Foundet.</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="photo_fragment">I am the photo fragment!</string>
    <string name="history_fragment">I am the history fragment!</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnViewAll">View All Databass Content</string>
    <string name="btnDelete">Delete shit</string>
    <string name="action_settings">Settings</string>
    <string name="updateGPS">Update Location</string>
    <string name="btnAdd">Add stuff to databass</string>

    <string name="capture">Capture Location</string>
    <string name="manual">Manually Enter Address</string>
    <string name="coord">Grab Coordinates Only</string>
    <string name="history">Geohistory</string>
    <string name="account">My Account</string>
    <string name="title_activity_manual">ManualActivity</string>
    <string name="title_activity_coord_">Coord_Activity</string>
    <string name="title_activity_submit_">Submit_Activity</string>
    <string name="Send">Send To Friend (Coordinates Only)</string>
    <string name="Send_Pic">Send To Friend (With Photo)</string>
    <string name="Gen">Generate Coordinates</string>
    <string name="Save_Later">Save For Later</string>
    <string name="Ret">Return</string>
    <string name="lat">Latitude,</string>
    <string name="lng">Longitude</string>
    <string name="title_activity_geodata">Geodata</string>
    <string name="text">Would you like to attach a photo too?</string>



</resources>