<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.luis.found.Coord_Activity">

    <TextView android:text="@string/lat" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lat"
        android:textSize="32sp"
        android:layout_above="@+id/Gen"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="117dp" />


    <TextView android:text="@string/lng" android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/lng"
        android:textSize="32sp"
        android:layout_gravity="bottom"
        android:layout_alignTop="@+id/lat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />

    <Button android:id="@+id/Send"
        android:text="@string/Send"
        android:layout_x="30dp"
        android:layout_y="200dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_above="@+id/Save_Later"
        android:layout_alignLeft="@+id/Save_Later"
        android:layout_alignStart="@+id/Save_Later" />

    <Button android:id="@+id/Gen"
        android:text="@string/Gen"
        android:layout_x="30dp"
        android:layout_y="200dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_above="@+id/Send"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/Save_Later"
        android:text="@string/Save_Later"
        android:layout_x="30dp"
        android:layout_y="200dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />





</RelativeLayout>
